feat: Add MyControllerFragment

--- a/res/layout/fragment_mycontroller.xml
+++ b/res/layout/fragment_mycontroller.xml
@@ -8,151 +8,25 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal">
 
-        <TextView
-            android:id="@+id/playerOne"
+        <EditText
+
+            android:id="@+id/inputnumber"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
             android:layout_marginStart="10dp"
             android:layout_marginTop="15dp"
-            android:text="플레이어1"
-            android:textSize="20sp"/>
+            android:text="_______"
+            android:textSize="50sp"/>
 
-        <TextView
-            android:id="@+id/playerOneScore"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="50dp"
-            android:text="0"
-            android:textSize="25sp"/>
-
-        <TextView
-            android:id="@+id/playerTwo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="10dp"
-            android:layout_marginTop="15dp"
-            android:text="플레이어2"
-            android:textSize="20sp"/>
-
-        <TextView
-            android:id="@+id/playerTwoScore"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="50dp"
-            android:layout_marginEnd="50dp"
-            android:text="0"
-            android:textSize="25sp"/>
-
-        <TextView
-            android:id="@+id/playerStatus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="50dp"
-            android:textAlignment="center"
-            android:textSize="20sp" />
     </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/btn_0"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_margin="5dp"
-            android:background="#413F43"
-            android:textColor="#ffffff"
-            android:textSize="60sp"
-            android:textStyle="bold"/>
-
-        <Button
-            android:id="@+id/btn_1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_margin="5dp"
-            android:background="#413F43"
-            android:textColor="#ffffff"
-            android:textSize="60sp"
-            android:textStyle="bold" />
-
-        <Button
-            android:id="@+id/btn_2"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_margin="5dp"
-            android:background="#413F43"
-            android:textColor="#ffffff"
-            android:textSize="60sp"
-            android:textStyle="bold" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/btn_3"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_margin="5dp"
-            android:background="#413F43"
-            android:textColor="#ffffff"
-            android:textSize="60sp"
-            android:textStyle="bold"/>
-
-        <Button
-            android:id="@+id/btn_4"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_margin="5dp"
-            android:background="#413F43"
-            android:textColor="#ffffff"
-            android:textSize="60sp"
-            android:textStyle="bold" />
-
-        <Button
-            android:id="@+id/btn_5"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_margin="5dp"
-            android:background="#413F43"
-            android:textColor="#ffffff"
-            android:textSize="60sp"
-            android:textStyle="bold" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/btn_6"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_margin="5dp"
-            android:background="#413F43"
-            android:textColor="#ffffff"
-            android:textSize="60sp"
-            android:textStyle="bold"/>
 
         <Button
             android:id="@+id/btn_7"
@@ -163,7 +37,8 @@
             android:background="#413F43"
             android:textColor="#ffffff"
             android:textSize="60sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:text="7" />
 
         <Button
             android:id="@+id/btn_8"
@@ -174,17 +49,163 @@
             android:background="#413F43"
             android:textColor="#ffffff"
             android:textSize="60sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:text="8"/>
+
+        <Button
+            android:id="@+id/btn_9"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_margin="5dp"
+            android:background="#413F43"
+            android:textColor="#ffffff"
+            android:textSize="60sp"
+            android:textStyle="bold"
+            android:text="9"/>
     </LinearLayout>
 
-    <Button
-        android:id="@+id/resetGame"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="60sp"
-        android:backgroundTint="#E1470D"
-        android:textColor="#ffffff"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btn_4"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_margin="5dp"
+            android:background="#413F43"
+            android:textColor="#ffffff"
+            android:textSize="60sp"
+            android:textStyle="bold"
+            android:text="4"/>
+
+        <Button
+            android:id="@+id/btn_5"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_margin="5dp"
+            android:background="#413F43"
+            android:textColor="#ffffff"
+            android:textSize="60sp"
+            android:textStyle="bold"
+            android:text="5"/>
+
+        <Button
+            android:id="@+id/btn_6"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_margin="5dp"
+            android:background="#413F43"
+            android:textColor="#ffffff"
+            android:textSize="60sp"
+            android:textStyle="bold"
+            android:text="6"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btn_1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_margin="5dp"
+            android:background="#413F43"
+            android:textColor="#ffffff"
+            android:textSize="60sp"
+            android:textStyle="bold"
+            android:text="1"/>
+
+        <Button
+            android:id="@+id/btn_2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_margin="5dp"
+            android:background="#413F43"
+            android:textColor="#ffffff"
+            android:textSize="60sp"
+            android:textStyle="bold"
+            android:text="2"/>
+
+        <Button
+            android:id="@+id/btn_3"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_margin="5dp"
+            android:background="#413F43"
+            android:textColor="#ffffff"
+            android:textSize="60sp"
+            android:textStyle="bold"
+            android:text="3"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/resetButton"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:layout_weight="1"
+            android:background="#413F43"
+            android:text="reset"
+            android:textColor="#ffffff"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/btn_0"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_margin="5dp"
+            android:background="#413F43"
+            android:textColor="#ffffff"
+            android:textSize="60sp"
+            android:textStyle="bold"
+            android:text="0"/>
+
+        <Button
+            android:id="@+id/enterButton"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:layout_weight="1"
+            android:background="#413F43"
+            android:textColor="#ffffff"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:text="Enter"/>
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:gravity="center"
+        android:text="Volume"
         android:textSize="20sp"
-        android:textStyle="bold"
-        android:text="Reset Game"/>
+        android:textIsSelectable="false" />
+
+    <SeekBar
+        android:id="@+id/volumebar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp" />
 
 </LinearLayout>
